Added some actions upon command send to EIS modal

--- a/css/main.css
+++ b/css/main.css
@@ -52,6 +52,14 @@ html {
     line-height: 1.1;
 }
 
+.hidden {
+    display: none!important;
+}
+
+.show {
+    display: inline!important;
+}
+
 
 /*---------------------------------------------*/
 
